--- a/src/main/webapp/app/nodo3GList.xhtml
+++ b/src/main/webapp/app/nodo3GList.xhtml
@@ -41,11 +41,11 @@
                 </p:column>
 
                 <!--
-                                <p:column sortBy="#{item.ip.ip}" filterBy="#{item.ip.ip}">
+                                <p:column sortBy="#{item.escribano.escribano}" filterBy="#{item.escribano.escribano}">
                                     <f:facet name="header">
                                         <h:outputText value="IP"/>
                                     </f:facet>
-                                    <h:outputText value="#{item.ip.ip}"/>
+                                    <h:outputText value="#{item.escribano.escribano}"/>
                                 </p:column>
                 -->
 
