--- a/src/main/webapp/app/rncList.xhtml
+++ b/src/main/webapp/app/rncList.xhtml
@@ -26,7 +26,7 @@
                 </p:column>
 
                 <p:column selectionMode="multiple" style="width:18px"/>
-                <p:column sortBy="#{item.nombre}" filterBy="#{item.ip}">
+                <p:column sortBy="#{item.nombre}" filterBy="#{item.escribano}">
                     <f:facet name="header">
                         <h:outputText value="Sigla"/>
                     </f:facet>
