--- a/src/main/webapp/app/torreroList.xhtml
+++ b/src/main/webapp/app/torreroList.xhtml
@@ -35,7 +35,7 @@
                 </p:column>
 
                 <p:column selectionMode="multiple" style="width:18px"/>
-                <p:column sortBy="#{item.nombre}" filterBy="#{item.ip}">
+                <p:column sortBy="#{item.nombre}" filterBy="#{item.escribano}">
                     <f:facet name="header">
                         <h:outputText value="Nombre"/>
                     </f:facet>
