--- a/src/main/webapp/app/nodo3GList.xhtml
+++ b/src/main/webapp/app/nodo3GList.xhtml
@@ -64,13 +64,13 @@
                 </p:column>
 
                 <!--
-                                <p:column sortBy="#{item.rnc.nombre}" filterBy="#{item.rnc.nombre}"
+                                <p:column sortBy="#{item.registro.nombre}" filterBy="#{item.registro.nombre}"
                                           filterOptions="#{nodo3GController.rncListOptions}"
                                           filterMatchMode="exact">
                                     <f:facet name="header">
                                         <h:outputText value="RNC"/>
                                     </f:facet>
-                                    <h:outputText value="#{item.rnc.nombre}"/>
+                                    <h:outputText value="#{item.registro.nombre}"/>
                                 </p:column>
                 -->
 
